hphp/hack/test/typecheck/ffp/function_public_bad.php.exp
File "function_public_bad.php", line 4, characters 7-12:
Top-level functions cannot be declared `public` (Parsing[1002])
File "function_public_bad.php", line 4, characters 30-33:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
File "function_public_bad.php", line 4, characters 23-25:
Invalid return type (Typing[4336])
  File "function_public_bad.php", line 4, characters 30-33:
  Expected `void`
  File "function_public_bad.php", line 4, characters 23-25:
  But got `Awaitable<void>` because this function does not always return a value
